--- a/ErgoOpenCL.vcxproj
+++ b/ErgoOpenCL.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{19C0E2B9-63F8-4C92-B426-8D0F7E4248BC}</ProjectGuid>
     <RootNamespace>ErgoOpenCL</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -41,13 +41,13 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -70,7 +70,10 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>J:\FromF\ergo\VS\one\libcurl-vc-x64-release-dll-ipv6-sspi-winssl_2017\include;J:\FromF\ergo\VS\one\OpenSSL-Win64\include;C:\Program Files %28x86%29\AMD APP SDK\3.0\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\OpenSSL-Win64\include;E:\Ergo\libcurl-vc-x64-release-dll-ipv6-sspi-winssl\include;$(IncludePath)</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>C:\OpenSSL-Win64\include;E:\Ergo\libcurl-vc-x64-release-dll-ipv6-sspi-winssl\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -86,11 +89,11 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>false</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>J:\FromF\ergo\VS\one\libcurl-vc-x64-release-dll-ipv6-sspi-winssl_2017\include;J:\FromF\ergo\VS\one\OpenSSL-Win64\include;C:\Program Files %28x86%29\AMD APP SDK\3.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\Ergo\libcurl-vc-x64-release-dll-ipv6-sspi-winssl;C:\OpenSSL-Win64\include;C:\Program Files %28x86%29\AMD APP SDK\3.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>J:\FromF\ergo\VS\one\libcurl-vc-x64-release-dll-ipv6-sspi-winssl_2017\lib;J:\FromF\ergo\VS\one\OpenSSL-Win64\lib;C:\Program Files %28x86%29\AMD APP SDK\3.0\lib\x86_64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\OpenSSL-Win64\lib;E:\Ergo\libcurl-vc-x64-release-dll-ipv6-sspi-winssl\lib;C:\Program Files %28x86%29\AMD APP SDK\3.0\lib\x86_64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>OpenCL.lib;libcurl.lib;libeay32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -117,13 +120,13 @@
       <SDLCheck>false</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>J:\FromF\ergo\VS\one\libcurl-vc-x64-release-dll-ipv6-sspi-winssl_2017\include;J:\FromF\ergo\VS\one\OpenSSL-Win64\include;C:\Program Files %28x86%29\AMD APP SDK\3.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\Ergo\libcurl-vc-x64-release-dll-ipv6-sspi-winssl;C:\OpenSSL-Win64\include;C:\Program Files %28x86%29\AMD APP SDK\3.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>OpenCL.lib;libcurl.lib;libeay32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>J:\FromF\ergo\VS\one\libcurl-vc-x64-release-dll-ipv6-sspi-winssl_2017\lib;J:\FromF\ergo\VS\one\OpenSSL-Win64\lib;C:\Program Files %28x86%29\AMD APP SDK\3.0\lib\x86_64</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\OpenSSL-Win64\lib;E:\Ergo\libcurl-vc-x64-release-dll-ipv6-sspi-winssl\lib;C:\Program Files %28x86%29\AMD APP SDK\3.0\lib\x86_64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -136,11 +139,14 @@
     <ClCompile Include="easylogging++.cc" />
     <ClCompile Include="ergoAutolykos.cpp" />
     <ClCompile Include="ErgoOpenCL.cpp" />
+    <ClCompile Include="httpapi.cc" />
     <ClCompile Include="jsmn.c" />
+    <ClCompile Include="adl.h" />
     <ClCompile Include="processing.cc" />
     <ClCompile Include="request.cc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="adl-sdk\adl_functaions.h" />
     <ClInclude Include="clMining.h" />
     <ClInclude Include="clPreHash.h" />
     <ClInclude Include="cl_warpper.h" />
@@ -150,6 +156,8 @@
     <ClInclude Include="easylogging++.h" />
     <ClInclude Include="ergoAutolykos.h" />
     <ClInclude Include="ergoTester.h" />
+    <ClInclude Include="httpapi.h" />
+    <ClInclude Include="httplib.h" />
     <ClInclude Include="jsmn.h" />
     <ClInclude Include="OCLdecs.h" />
     <ClInclude Include="OCLdefs.h" />
